# disco

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  local_tasks.py  manage.py  pyproject.toml
.github/workflows/: docker-publish.yml  pre-commit.yml  publish-docker.yml  publish.yml
docs/: conf.py  index.md  make.py  requirements.txt  user.md
docs/api/: disco.helpers.rst  disco.migrations.rst  disco.rst  modules.rst
docs/user/: config.md
res/: neuezwanziger.xml  run-bot-debug.sh  run-bot.sh  secrets.example.json
res/misc/: example_autoresponder.py  map-demo.html
res/schemas/: bot.v1.example.toml  bot.v1.md  bot.v1.schema.json  definition-webhook.schema.v0.dev.json  podcasts.example.toml  podcasts.schema.v1.json  podcasts.schema.v1.md  podcasts.v1.example.toml  podcasts.v1.md  podcasts.v1.schema.json  secrets.example.toml  secrets.schema.v1.json  secrets.schema.v1.md  secrets.v1.example.toml  secrets.v1.md  secrets.v1.schema.json
res/scripts/: install-simple.sh  install.sh  run-bot-debug.sh  run-bot.sh  uninstall.sh
src/: example_autoresponder.py
src/disco/: __init__.py  __main__.py  backfill_rss.py  configuration.py  definitions.py  helpers.py  models.py  paths.py  rss.py  schemas.py  settings.py  tryouts.py
src/disco/helpers/: __init__.py  atomicwrites.py  database.py  sorting.py
src/disco/migrations/: 0001_initial.py  __init__.py
src/disco/schemas/: __init__.py  docgen.py
src/discord_automation/: __init__.py  __main__.py  backfill_rss.py
tests/: temp_test.py
