[tool.definitions]
name-pretty = "Disco!"
sphinx-extensions = ["myst_parser", "sphinx.ext.autodoc"]
sphinx-html-theme = "sphinx_book_theme"
myst-enable-extensions = ["colon_fence"]

[tool.poetry]
name = "disco"
version = "0.1.0.dev"
description = ""
authors = ["Fabian H. Schneider <discord-automation.primarily965@simplelogin.com>"]
readme = "README.md"
documentation = "https://disco-automate.readthedocs.io/"
packages = [{ include = "disco", from = "src" }, ]
include = ["res/*"]

[tool.poetry.scripts]
disco = "disco.__main__:main"

[tool.poetry.dependencies]
python = ">=3.12 <4"
# Dependencies
attrs = ">=24.2.0"  # https://www.attrs.org/en/stable/changelog.html
discord-py = "^2.4.0"  # https://discordpy.readthedocs.io/en/stable/whats_new.html
django = "^5.1.2"  # https://docs.djangoproject.com/en/5.1/releases/
feedparser = "^6.0.11"  # https://github.com/kurtmckee/feedparser/blob/develop/CHANGELOG.rst
jsonschema = "^4.23.0"  # https://github.com/python-jsonschema/jsonschema/releases
packaging = "*"  # https://packaging.pypa.io/en/stable/changelog.html
python-dateutil = "^2.9.0.post0"  # https://github.com/dateutil/dateutil/releases
python-decouple = "^3.8"  # https://github.com/HBNetwork/python-decouple/blob/master/CHANGELOG.md
tomli-w = "^1.1.0"  # https://github.com/hukkin/tomli-w/blob/master/CHANGELOG.md
yt-dlp = "^2024.10.7"  # https://github.com/yt-dlp/yt-dlp/blob/master/Changelog.md

[tool.poetry.group.dev.dependencies]
docsig = "^0.64.0"  # https://docsig.readthedocs.io/en/latest/development/changelog.html
mypy = "^1.12.0"  # https://github.com/python/mypy/blob/master/CHANGELOG.md
pytest = "^8.3.3"  # https://docs.pytest.org/en/stable/changelog.html
myst-parser = "^4.0.0"  # https://myst-parser.readthedocs.io/en/latest/develop/_changelog.html
sphinx = "^7.4.7"  # https://www.sphinx-doc.org/en/master/changes/index.html
sphinx-book-theme = "^1.1.3"  # https://github.com/executablebooks/sphinx-book-theme/blob/master/CHANGELOG.md
types-colorama = "^0.4.15.20240311"
types-jsonschema = "^4.22.0.20240610"
types-python-dateutil = "^2.9.0.20240906"
types-requests = "^2.32.0.20241016"
types-xmltodict = "^0.14.0.20241009"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.docsig]
check-class-constructor = true
check-dunders = true
check-protected = true
check-overriden = false
disable = []

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
python_version = "3.12"
ignore_errors = false
# ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "disco.migrations.*"
ignore_errors = true

[tool.refurb]
enable_all = true
python_version = "3.12"
quiet = true

[tool.ruff]
line-length = 120
preview = true
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # pycodestyle
    "W",     # pycodestyle
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "C90",   # mccabe
    "RET",   # flake8-return
    "RUF",   # ruff
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "FURB",  # refurb
]
ignore = ["RET503", "RUF012"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
