[project]
name = "disco"
version = "0.1.0.dev"
description = ""
requires-python = ">=3.14, <4"
license = "MPL-2.0"
authors = [
    { name = "Fabian H. Schneider", email = "discord-automation.primarily965@simplelogin.com" },
]
dynamic = [
    "dependencies",
    "optional-dependencies",
]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8; variant=GFM"

[project.urls]
documentation = "https://disco-automate.readthedocs.io/"
source = "https://github.com/FlotterCodername/disco"
issues = "https://github.com/FlotterCodername/disco/issues"

[project.scripts]
disco = "disco.__main__:main"

[tool.definitions]
name-pretty = "Disco"
sphinx-extensions = ["myst_parser", "sphinx.ext.autodoc"]
sphinx-html-theme = "sphinx_book_theme"
myst-enable-extensions = ["colon_fence"]

[tool.poetry]
requires-poetry = ">=2.3.2"
packages = [{ include = "disco", from = "src" }, ]
include = ["res/*"]

[tool.poetry.dependencies]
# Dependencies
attrs = "^25.4.0"  # https://www.attrs.org/en/stable/changelog.html
discord-py = "^2.6.4"  # https://discordpy.readthedocs.io/en/stable/whats_new.html
django = "^6.0.2"  # https://docs.djangoproject.com/en/5.1/releases/
feedparser = "^6.0.12"  # https://github.com/kurtmckee/feedparser/blob/develop/CHANGELOG.rst
jsonschema = "^4.26.0"  # https://github.com/python-jsonschema/jsonschema/releases
packaging = "^26.0"  # https://packaging.pypa.io/en/stable/changelog.html
python-dateutil = "^2.9.0.post0"  # https://github.com/dateutil/dateutil/releases
python-decouple = "^3.8"  # https://github.com/HBNetwork/python-decouple/blob/master/CHANGELOG.md
tomli-w = "^1.2.0"  # https://github.com/hukkin/tomli-w/blob/master/CHANGELOG.md
yt-dlp = "^2026.2.4"  # https://github.com/yt-dlp/yt-dlp/blob/master/Changelog.md

[tool.poetry.group.dev.dependencies]
docsig = "^0.78.0"  # https://docsig.readthedocs.io/en/latest/development/changelog.html
mypy = "^1.19.1"  # https://github.com/python/mypy/blob/master/CHANGELOG.md
pytest = "^9.0.2"  # https://docs.pytest.org/en/stable/changelog.html
myst-parser = "^4.0.0"  # https://myst-parser.readthedocs.io/en/latest/develop/_changelog.html
sphinx = "^7.4.7"  # https://www.sphinx-doc.org/en/master/changes/index.html
sphinx-book-theme = "^1.1.4"  # https://github.com/executablebooks/sphinx-book-theme/blob/master/CHANGELOG.md
types-colorama = "^0.4.15.20250801"
types-jsonschema = "^4.26.0.20260202"
types-python-dateutil = "^2.9.0.20260124"
types-requests = "^2.32.4.20260107"
types-xmltodict = "^1.0.1.20260113"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.docsig]
check-class-constructor = true
check-dunders = true
check-protected = true
check-overriden = false
disable = []

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
python_version = "3.14"
ignore_errors = false
# ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "disco.migrations.*"
ignore_errors = true

[tool.refurb]
enable_all = true
python_version = "3.14"
quiet = true

[tool.ruff]
line-length = 120
preview = true
target-version = "py314"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # pycodestyle
    "W",     # pycodestyle
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "C90",   # mccabe
    "RET",   # flake8-return
    "RUF",   # ruff
    "TID",   # flake8-tidy-imports
    "TCH",   # flake8-type-checking
    "FURB",  # refurb
]
ignore = ["RET503", "RUF012", "RUF067"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
